@@ -1,5 +1,9 @@
 $Id$
 
+2008-10-17 David Heremans <david.heremans@gnu-linux.net>
+	* Added the SimpleHexRequest and SimpleHexRequestUser:
+	  An attempt to simplify the request of openMSX debugable data
+
 2008-10-13 David Heremans <david.heremans@gnu-linux.net>
 	* Check if this it is {physical VRAM} vs the older {VRAM}
 	* More registerViewer code
